[package]
name = "performance_metrics_diff_dbs"
version = "0.1.0"
edition = "2021"

[dependencies]
leveldb = "0.8.6"
mongodb = "3.2.2"
rocksdb = "0.23.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = "2.2.1"
tokio = { version = "1.44.0", features = ["full"] }
tokio-postgres = "0.7.13"

[dev-dependencies]
criterion = "0.5.1"
